--- a/privacy/index.html
+++ b/privacy/index.html
@@ -171,7 +171,7 @@ bluewallet@bluewallet.io and we will promptly remove you from ALL correspondence
        
         <div class="fmenu">
           <a href="/donate.html"><span class="foot-menu">Donate</span></a>
-          <a href="/features.html"><span class="foot-menu">Features</span></a>
+          <a href="/features"><span class="foot-menu">Features</span></a>
           <a href="/about"><span class="foot-menu">About</span></a>
         </div>
         <br />
