--- a/tos/index.html
+++ b/tos/index.html
@@ -146,7 +146,7 @@
        
         <div class="fmenu">
           <a href="/donate.html"><span class="foot-menu">Donate</span></a>
-          <a href="/features.html"><span class="foot-menu">Features</span></a>
+          <a href="/features"><span class="foot-menu">Features</span></a>
           <a href="/about"><span class="foot-menu">About</span></a>
         </div>
         <br />
