remove html from link

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 </div>
                 <div class="row">
                   <div class="mx-auto animate-this">
-                    <a href="/features.html">
+                    <a href="/features">
                       <button type="button" class="btn btn-lg btn-outline-light">all features →</button>
                     </a>
                   </div>
@@ -236,7 +236,7 @@
                 </div>
                 <div class="row">
                   <div class="mx-auto animate-this">
-                    <a href="/features.html">
+                    <a href="/features">
                       <button type="button" class="btn btn-lg btn-primary">all features →</button>
                     </a>
                   </div>
@@ -369,7 +369,7 @@
        
         <div class="fmenu">
           <a href="/donate.html"><span class="foot-menu">Donate</span></a>
-          <a href="/features.html"><span class="foot-menu">Features</span></a>
+          <a href="/features"><span class="foot-menu">Features</span></a>
           <a href="/about"><span class="foot-menu">About</span></a>
         </div>
         <br />
