--- a/features/index.html
+++ b/features/index.html
@@ -35,9 +35,9 @@
     <link rel="apple-touch-icon" sizes="180x180" href="../img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon/favicon-16x16.png">
-    <link rel="manifest" href="img/favicon/site.webmanifest">
-    <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="shortcut icon" href="img/favicon/favicon.ico">
+    <link rel="manifest" href="../img/favicon/site.webmanifest">
+    <link rel="mask-icon" href="../img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="../img/favicon/favicon.ico">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="msapplication-config" content="../img/favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
@@ -49,14 +49,14 @@
     <meta property="og:site_name" content="BlueWallet - Bitcoin wallet" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="A Bitcoin wallet for iOS. Easy to use and secure" />
-    <meta property="og:url" content="https://bluewallet.io/features.html" />
+    <meta property="og:url" content="https://bluewallet.io/features" />
     <meta property="og:title" content="BlueWallet - Bitcoin wallet" />
     <meta property="fb:app_id" content="254973701957449" />
     <meta property="fb:pages" content="499685187154976" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="BlueWallet - Bitcoin wallet" />
     <meta name="twitter:description" content="A Bitcoin wallet for iOS. Easy to use and secure" />
-    <meta name="twitter:url" content="https://bluewallet.io/features.html" />
+    <meta name="twitter:url" content="https://bluewallet.io/features" />
 
   </head>
 
