--- a/features/index.html
+++ b/features/index.html
@@ -123,12 +123,12 @@
 
                 <div class="feature-item">
                   <h3 id="hw">Hardware Wallets <span class="done">new</span></h3>
-                  <p>Hability to connect and work with Hardware Wallets that support PSBT. After importing your wallet on wacht-only mode. Go to the wallets options and turn on "hardware wallet" mode.</p>
+                  <p>Hability to connect and work with Hardware Wallets that support PSBT. After importing your wallet on watch-only mode, go to the wallet options and turn on "hardware wallet" mode.</p>
                 </div>
 
                 <div class="feature-item">
                   <h3 id="psbt">PSBT <span class="done">new</span></h3>
-                  <p>Support for PSBT - Partially Signed Bitcoin Transactions, BIP 174. Under the wood now transactions on BlueWallet are using and constructed by the PSBT standard.</p>
+                  <p>Support for PSBT - Partially Signed Bitcoin Transactions, BIP 174. Under the hood now transactions on BlueWallet are using and constructed by the PSBT standard.</p>
                 </div>
             
                 <div class="feature-item">
