--- a/features/index.html
+++ b/features/index.html
@@ -123,7 +123,7 @@
 
                 <div class="feature-item">
                   <h3 id="hw">Hardware Wallets <span class="done">new</span></h3>
-                  <p>Hability to connect and work with Hardware Wallets that support PSBT. After importing your wallet on watch-only mode, go to the wallet options and turn on "hardware wallet" mode.</p>
+                  <p>Ability to connect and work with Hardware Wallets that support PSBT. After importing your wallet on watch-only mode, go to the wallet options and turn on "hardware wallet" mode.</p>
                 </div>
 
                 <div class="feature-item">
