--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
     <meta name="theme-color" content="#ffffff">
 
     <!-- og:tags -->
-    <meta property="og:image" content="https://bluewallet.io/img/bluewallet-big.png" />
-    <meta name="twitter:image" content="https://bluewallet.io/img/bluewallet-big.png" />
+    <meta property="og:image" content="https://bluewallet.io/img/backpurple.png" />
+    <meta name="twitter:image" content="https://bluewallet.io/img/backpurple.png" />
 
-    <meta property="og:site_name" content="BlueWallet - Bitcoin and Lightning wallet" />
+    <meta property="og:site_name" content="BlueWallet - Bitcoin wallet" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="A Bitcoin and Lightning wallet for iOS. Easy to use and secure" />
+    <meta property="og:description" content="A Bitcoin wallet for iOS and android. Bitcoin should be fun, usable and for everyone" />
     <meta property="og:url" content="https://bluewallet.io/" />
     <meta property="og:title" content="BlueWallet - Bitcoin and Lightning wallet" />
     <meta property="fb:app_id" content="254973701957449" />
     <meta property="fb:pages" content="499685187154976" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="BlueWallet - Bitcoin and Lightning wallet" />
-    <meta name="twitter:description" content="A Bitcoin and Lightning wallet for iOS. Easy to use and secure" />
+    <meta name="twitter:title" content="BlueWallet - Bitcoin wallet" />
+    <meta name="twitter:description" content="A Bitcoin wallet for iOS and android. Bitcoin should be fun, usable and for everyone" />
     <meta name="twitter:url" content="https://bluewallet.io/" />
 
   </head>
