--- a/testpage/index.html
+++ b/testpage/index.html
@@ -30,6 +30,11 @@
 		      <img src="deeplink_bitcoin_caps_withamount_and_label.png"/><br/>
 		      <a href="bitcoin:BC1QH6TF004TY7Z7UN2V5NTU4MKF630545GVHS45U7?amount=666&label=Yo">bitcoin:BC1QH6TF004TY7Z7UN2V5NTU4MKF630545GVHS45U7?amount=666&label=Yo</a>
 		    </div>
+		    
+		    <div class="col-sm">
+		      <img src="80001870-cc04c380-84b6-11ea-99a3-c2c8e719a4bd.png"/><br/>
+		      <a href="BITCOIN:BC1Q3RL0MKYK0ZRTXFMQN9WPCD3GNAZ00YV9YP0HXE">BITCOIN:BC1Q3RL0MKYK0ZRTXFMQN9WPCD3GNAZ00YV9YP0HXE</a>
+		    </div>
 		</div>
 
 
