--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                   <a href="/lightning">
                     <div class="feature-item animate-this">
                         <h3>Lightning Wallets</h3>
-                        <p>Unfarly cheap and blazing fast transactions on Bitcoin</p>
+                        <p>Unfairly cheap and blazing fast transactions on Bitcoin</p>
                     </div>
                   </a>
                 </div>
