--- a/buy-bitcoin-redirect.html
+++ b/buy-bitcoin-redirect.html
@@ -56,6 +56,7 @@
 
     $.ajax({
       url: "https://geolocation-db.com/jsonp",
+      timeout: 5000,
       jsonpCallback: "callback",
       dataType: "jsonp",
       error: function() {
