ADD: mercuryo integration

--- a/buy-bitcoin-redirect.html
+++ b/buy-bitcoin-redirect.html
@@ -38,10 +38,10 @@
   <div class="lds-dual-ring"></div>
   <script>
     var safello_countries = ["SE"];
-    var xanpool_countries = ["TH", "PH", "IN", "ID", "VN", "MY"]; // + "SG", "HK",
+    var xanpool_countries = ["TH", "PH", "IN", "VN", "MY"]; // + "SG", "HK", "ID"
     var moonpay_currencies = ["EUR", "GBP", "USD"];
     var xanpool_currencies = ["SGD", "HKD", "THB", "PHP", "INR", "IDR", "VND", "MYR", "SGD", "HKD", "PHP", "INR", "VND", "THB"];
-    var mercuryo_countries = ["RU", "UA", "BY", "AM", "AZ", "BY", "GEN", "KZ", "KE", "LA", "MD", "MC", "ME", "SM", "RS", "TJ", "UZ", "SG", "HK", "KR"];
+    var mercuryo_countries = ["RU", "UA", "BY", "AM", "AZ", "BY", "GEN", "KZ", "KE", "LA", "MD", "MC", "ME", "SM", "RS", "TJ", "UZ", "SG", "HK", "KR", "AR", "ID", "TR", "JP"];
     var mercuryo_currencies = ["EUR", "RUB", "USD", "IDR", "KRW", "JPY", "TRY", "GBP", "UAH", "ARS"];
     var u = new URLSearchParams(window.location.search);
     var address = u.get('address') || '';
