--- a/about/index.html
+++ b/about/index.html
@@ -117,7 +117,7 @@
           <div class="col-md-9">
         <h1>About</h1>
         <p>The Bluewallet project born out of the ashes of the 2017 bull-run. With the frustration of not finding a wallet for our Bitcoin needs and level of knowledge. Where we could have a Bitcoin only wallet and full control of the transactions. At the time, there wasn't a single Bitcoin wallet available for iOS that was bitcoin-only, supported Segwit and where we could have fee control. So we decided to build it.</p>
-        <p>Our commitment is to build the best Bitcoin wallet we can, with focus on open source fundations, self-sovereign principles, decentralization and the Chyperpunk's Manifesto. We will iterate slowly, we will not build it in one day, but we will get there.</p>
+        <p>Our commitment is to build the best Bitcoin wallet we can, with focus on open source fundations, self-sovereign principles, decentralization and the Cypherpunk's Manifesto. We will iterate slowly, we will not build it in one day, but we will get there.</p>
         <h2>Who are we</h2>
         <p>We are <strong>Bitcoin</strong> enthusiasts focused on bringing the revolution to the people. 🔥<br />Reach out, we will appreciate your feedback.</p>
         
