ADD: azteco qr to testpage

--- a/testpage/index.html
+++ b/testpage/index.html
@@ -129,6 +129,12 @@
 		  </div>
 		</div>
 
+		<div class="row">
+		    <div class="col-sm">
+		      <img height="50%" src="azteco.png"/>
+		  </div>
+		</div>
+
 
 		
 		
