--- a/local-trader/index.html
+++ b/local-trader/index.html
@@ -155,35 +155,37 @@
             <h2>How does it work</h2>
             <div class="row localexplain">
 
-               <div class="col-md-3">
+               <div class="col-lg-3">
                  <img src="../img/local-step1.svg" alt="step1 - local Trader">
                  <p><span>Step 1</span> - Accept offer and a secure multisig escrow contract is created</p>
                </div>
-               <div class="col-md-3">
-                  <p><span>Step 2</span> - Seller deposits Bitcoin in the escrow directly from his wallet</p>
-                  <img src="../img/local-step2.svg" alt="step2 - local Trader">
+               <div class="col-lg-3">
+                  <p class="order2"><span>Step 2</span> - Seller deposits Bitcoin in the escrow directly from his wallet</p>
+                  <img src="../img/local-step2.svg" alt="step2 - local Trader" class="order1">
                </div>
-               <div class="col-md-3">
+               <div class="col-lg-3">
                   <img src="../img/local-step3.svg" alt="step3 - local Trader">
                   <p><span>Step 3</span> - Buyer pays the seller according to the agreed upon payment method</p>
                </div>
-               <div class="col-md-3">
-                  <p><span>Step 4</span> - Seller releases Bitcoin from multisig escrow directly to the buyer’s wallet</p>
-                  <img src="../img/local-step4.svg" alt="step4 - local Trader">
+               <div class="col-lg-3">
+                  <p class="order2"><span>Step 4</span> - Seller releases Bitcoin from multisig escrow directly to the buyer’s wallet</p>
+                  <img src="../img/local-step4.svg" alt="step4 - local Trader" class="order1">
                </div>
             </div>
          </div>
-         <div class="row hodlhodl">
-            <div class="col-md-1 mx-auto my-auto text-center">
-               <img src="../img/hhlogo.svg" alt="hodlhodl">
-            </div>
-            <div class="col-md-11">
-               <div class="text-left">
-                 <p>Local Trader is powered and built in collaboration with HodlHodl <br />
-                 A powerful Global P2P Bitcoin trading platform that doesn’t hold funds </p>
+         <a href="https://hodlhodl.com" target="_blank">
+            <div class="row hodlhodl">
+               <div class="col-md-1 mx-auto my-auto text-center">
+                  <img src="../img/hhlogo.svg" alt="hodlhodl">
                </div>
+               <div class="col-md-11">
+                  <div class="text-left">
+                    <p>Local Trader is powered and built in collaboration with HodlHodl <br />
+                    A powerful Global P2P Bitcoin trading platform that doesn’t hold funds </p>
+                  </div>
+               </div>   
             </div>
-         </div>
+         </a>
       </div>
     </section>
 
