--- a/local-trader/index.html
+++ b/local-trader/index.html
@@ -13,7 +13,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Bitcoin onchain and lightning wallet available for iOS and android">
+    <meta name="description" content="Buy Bitcoin peer-2-peer controlling your funds bitcoin wallet">
     <meta name="author" content="Bluewallet Services S.R.L.">
 
     <title>Local Trader - p2p Bitcoin trading for iOS and Android by BlueWallet</title>
@@ -41,20 +41,20 @@
     <meta name="theme-color" content="#ffffff">
 
     <!-- og:tags -->
-    <meta property="og:image" content="https://bluewallet.io/img/bitcoinwallets.png" />
-    <meta name="twitter:image" content="https://bluewallet.io/img/bitcoinwallets.png" />
+    <meta property="og:image" content="https://bluewallet.io/img/localcover.png" />
+    <meta name="twitter:image" content="https://bluewallet.io/img/localcover.png" />
 
     <meta property="og:site_name" content="Local Trader - p2p Bitcoin trading" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="Bitcoin onchain and lightning wallet available for iOS and android" />
-    <meta property="og:url" content="https://bluewallet.io/bitcoin-wallet" />
-    <meta property="og:title" content="BlueWallet - Bitcoin wallet" />
+    <meta property="og:description" content="Buy Bitcoin peer-2-peer controlling your funds" />
+    <meta property="og:url" content="https://bluewallet.io/local-trader" />
+    <meta property="og:title" content="Local Trader - p2p Bitcoin trading" />
     <meta property="fb:app_id" content="254973701957449" />
     <meta property="fb:pages" content="499685187154976" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Local Trader - p2p Bitcoin trading" />
     <meta name="twitter:description" content="Buy Bitcoin peer-2-peer controlling your funds" />
-    <meta name="twitter:url" content="https://bluewallet.io/bitcoin-wallet" />
+    <meta name="twitter:url" content="https://bluewallet.io/local-trader" />
 
   </head>
 
@@ -122,7 +122,7 @@
             </div>
             <div class="col-lg-12 my-auto">
                <div class="row imghero">
-                  <img src="../img/localtrader.png">
+                  <img src="../img/localtrader.png" alt="local trader by bluewallet">
                </div>   
             </div>
          </div> <!-- container -->
