--- a/local-trader/index.html
+++ b/local-trader/index.html
@@ -112,7 +112,7 @@
          <div class="container">
             <div class="section-heading text-center">
                <h1>Local Trader</h1>
-               <p class="text-center">Buy Bitcoin peer-2-peer controlling your funds</p>
+               <p class="text-center">Buy Bitcoin p2p while  controlling your funds</p>
             </div>
             <div class="col-md-12 mx-auto text-center">
                <div class="badges">
@@ -145,22 +145,22 @@
                </div>
                <div class="col-md-4">
                   <h4>Manage contracts</h4>
-                  <p>Once a offer is accepted a “contract” is created and can be viewed in the app</p>
+                  <p>Once an offer is accepted a “contract” is created and can be viewed in the app</p>
                </div>
             </div>
          </div>
       
  
          <div class="col-md-12 text-center">
-            <h2>How does it work</h2>
+            <h2>How it works</h2>
             <div class="row localexplain">
 
                <div class="col-lg-3">
                  <img src="../img/local-step1.svg" alt="step1 - local Trader">
-                 <p><span>Step 1</span> - Accept offer and a secure multisig escrow contract is created</p>
+                 <p><span>Step 1</span> - Accept an offer and a secure multisig escrow contract is created</p>
                </div>
                <div class="col-lg-3">
-                  <p class="order2"><span>Step 2</span> - Seller deposits Bitcoin in the escrow directly from his wallet</p>
+                  <p class="order2"><span>Step 2</span> - Seller deposits Bitcoin in the escrow directly from their wallet</p>
                   <img src="../img/local-step2.svg" alt="step2 - local Trader" class="order1">
                </div>
                <div class="col-lg-3">
