--- a/desktop-bitcoin-wallet/index.html
+++ b/desktop-bitcoin-wallet/index.html
@@ -136,7 +136,7 @@
           <div class="col-lg-6 my-auto">
             <div class="header-content mx-auto">
               <h1>Desktop Wallet</h1>
-                <p>BlueWallet Alpha version for MacOS Catalina</p>
+                <p>BlueWallet Alpha version for macOS Catalina</p>
                 <ul class="list-unstyled cta">
                     <li>
 
