--- a/desktop-bitcoin-wallet/index.html
+++ b/desktop-bitcoin-wallet/index.html
@@ -17,7 +17,7 @@
     <meta name="description" content="Apple Watch app for bitcoin and lightning">
     <meta name="author" content="Bluewallet Services S.R.L.">
 
-    <title>Desktop Bitcoin Wallet - Bitcoin and Lightning wallet for Desktop, MacOS, Linux and Windowns</title>
+    <title>Desktop Bitcoin Wallet - Bitcoin and Lightning wallet for Desktop, macOS, Linux and Windows</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../ven/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -49,14 +49,14 @@
 
     <meta property="og:site_name" content="BlueWallet - Bitcoin and Lightning wallet" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="Desktop Bitcoin Wallet - Bitcoin and Lightning wallet for Desktop, MacOS, Linux and Windowns" />
+    <meta property="og:description" content="Desktop Bitcoin Wallet - Bitcoin and Lightning wallet for Desktop, MacOS, Linux and Windows" />
     <meta property="og:url" content="https://bluewallet.io/" />
     <meta property="og:title" content="Watch app - Bitcoin and Lightning wallet for iOS and Apple Watch" />
     <meta property="fb:app_id" content="254973701957449" />
     <meta property="fb:pages" content="499685187154976" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Desktop Bitcoin Wallet - Bitcoin and Lightning wallet for Desktop, MacOS, Linux and Windowns" />
-    <meta name="twitter:description" content="Desktop Bitcoin Wallet - Bitcoin and Lightning wallet for Desktop, MacOS, Linux and Windowns" />
+    <meta name="twitter:title" content="Desktop Bitcoin Wallet - Bitcoin and Lightning wallet for Desktop, MacOS, Linux and Windows" />
+    <meta name="twitter:description" content="Desktop Bitcoin Wallet - Bitcoin and Lightning wallet for Desktop, MacOS, Linux and Windows" />
     <meta name="twitter:url" content="https://bluewallet.io/desktop-bitcoin-wallet" />
 
   <style>
