--- a/local-trader/index.html
+++ b/local-trader/index.html
@@ -91,10 +91,11 @@
                   Products
                   </a>
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                     <a class="sublink" href="/local-trader">Local Trader</a>
-                     <a class="sublink" href="/lndhub">LndHUB</a>
-                     <a class="sublink" href="/watch-app">Watch App</a>
-                     <a class="sublink" href="/lapps">Lapp Marketplace</a>
+                    <a class="sublink" href="/desktop-bitcoin-wallet">Desktop app</a>
+                    <a class="sublink" href="/local-trader">Local Trader</a>
+                    <a class="sublink" href="/lndhub">LndHUB</a>
+                    <a class="sublink" href="/watch-app">Watch App</a>
+                    <a class="sublink" href="/lapps">Lapp Marketplace</a>
                   </div>
     
               </li>             <li class="nav-item">
