--- a/local-trader/index.html
+++ b/local-trader/index.html
@@ -174,6 +174,16 @@
                </div>
             </div>
          </div>
+          <div class="row">
+            <div class="col-md-12 coldcard">
+              
+              <div class="video-container">
+                <iframe width="853" height="480" src="https://www.youtube-nocookie.com/embed/BsfZXbqVYWs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
+              
+            </div>
+          </div>
+
          <a href="https://hodlhodl.com" target="_blank">
             <div class="row hodlhodl">
                <div class="col-md-1 mx-auto my-auto text-center">
