--- a/desktop-bitcoin-wallet/index.html
+++ b/desktop-bitcoin-wallet/index.html
@@ -44,19 +44,19 @@
     <meta name="theme-color" content="#ffffff">
 
     <!-- og:tags -->
-    <meta property="og:image" content="https://bluewallet.io/img/desktop-bitcoin-wallet.png" />
-    <meta name="twitter:image" content="https://bluewallet.io/img/desktop-bitcoin-wallet.png" />
+    <meta property="og:image" content="https://bluewallet.io/img/social-desktop.png" />
+    <meta name="twitter:image" content="https://bluewallet.io/img/social-desktop.png" />
 
     <meta property="og:site_name" content="BlueWallet - Bitcoin and Lightning wallet" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="Desktop Bitcoin Wallet - Bitcoin and Lightning wallet for Desktop, MacOS, Linux and Windows" />
+    <meta property="og:description" content="Desktop Bitcoin Wallet - Bitcoin and Lightning wallet for Desktop, macOS, Linux and Windows" />
     <meta property="og:url" content="https://bluewallet.io/" />
     <meta property="og:title" content="Watch app - Bitcoin and Lightning wallet for iOS and Apple Watch" />
     <meta property="fb:app_id" content="254973701957449" />
     <meta property="fb:pages" content="499685187154976" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Desktop Bitcoin Wallet - Bitcoin and Lightning wallet for Desktop, MacOS, Linux and Windows" />
-    <meta name="twitter:description" content="Desktop Bitcoin Wallet - Bitcoin and Lightning wallet for Desktop, MacOS, Linux and Windows" />
+    <meta name="twitter:title" content="Desktop Bitcoin Wallet - Bitcoin and Lightning wallet for Desktop, macOS, Linux and Windows" />
+    <meta name="twitter:description" content="Desktop Bitcoin Wallet - Bitcoin and Lightning wallet for Desktop, macOS, Linux and Windows" />
     <meta name="twitter:url" content="https://bluewallet.io/desktop-bitcoin-wallet" />
 
   <style>
@@ -80,7 +80,7 @@
 
   </head>
 
-  <body id="page-top" class="watch-app">
+  <body id="page-top" class="desktop-app">
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
@@ -131,53 +131,50 @@
     </nav>
 
 
-    <header class="masthead watch-app">
-      <div class="container wat h-100">
-        <div class="row h-100">
-          <div class="col-lg-6 my-auto">
-            <div class="header-content mx-auto">
+    <header class="desktop-app">
+      <div class="container wat">
+        <div class="row">
+          <div class="col-lg-12 my-auto text-center">
+            <div class="header-content text-center">
               <h1>Desktop Wallet</h1>
-                <p>BlueWallet Alpha version for macOS Catalina</p>
-                <ul class="list-unstyled cta">
-                    <li>
-
-                      <!-- Begin Mailchimp Signup Form -->
-<div id="mc_embed_signup">
-  <form action="https://bluewallet.us17.list-manage.com/subscribe/post?u=6733da37320f82a3dbe84a9cc&amp;id=2474ce3b66" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <div id="mc_embed_signup_scroll">
-      <div class="mc-field-group">
-          <input type="email" value="" placeholder="your email..." name="EMAIL" class="required email" id="mce-EMAIL">
-      </div>
-      <div id="mce-responses" class="clear">
-        <div class="response" id="mce-error-response" style="display:none"></div>
-        <div class="response" id="mce-success-response" style="display:none"></div>
-      </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-      <div style="position: absolute; left: -5000px;" aria-hidden="true">
-        <input type="checkbox" data-dojo-type="dijit/form/CheckBox" id="group_1" name="group[36437][1]" value="1" class="av-checkbox" checked>
-        <input type="text" name="b_6733da37320f82a3dbe84a9cc_2474ce3b66" tabindex="-1" value=""></div>
-      <div class="clear"><input type="submit" value="Download" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-      </div>
-  </form>
-</div>
-
-<!--End mc_embed_signup-->
-                    </li>
-                </ul>
+                <p>BlueWallet Desktop Bitcoin Wallet <strong>Alpha version</strong> for macOS</p>
+                <div class="cta text-center">
+                  <a href="/desktop-bitcoin-wallet/downloads/alpha-0_0_2/BlueWallet.dmg">
+                    <img alt="download bitcoin desktop wallet" src="../img/mac-store-badge.svg">
+                  </a>
+                </div>
             </div>
-
           </div>
-
-          <div class="col-lg-6 my-auto">
+          <div class="col-lg-12 my-auto">
             <div class="bighead3">
-              <img alt="watch app lightning preview" src="../img/desktop-bitcoin-wallet.png">
+              <img alt="desktop bitcoin wallet" src="../img/desktop-bitcoin-wallet.png">
             </div>
+          </div>
         </div>
       </div>
     </header>
+    <section class="local-features">
+      <div class="container">
+         <div class="col-md-12 text-center">
+            <h2>Features</h2>
+            <div class="row tell">
 
-    
-
-   
+               <div class="col-md-4">
+                 <h4>HW integration</h4>
+                 <p>Easily connect to your hardwallet wallet through watch-only and PSBTs support.</p>
+               </div>
+               <div class="col-md-4">
+                  <h4>Plausible Deniability</h4>
+                  <p>Create multiple storages or fake ones in case of a forced disclosure. All encrypted behind a password.</p>
+               </div>
+               <div class="col-md-4">
+                  <h4>Multiple Wallets</h4>
+                  <p>Supports most wallet types. Like Bip84/49/44, electrum, legacy, etc.</p>
+               </div>
+            </div>
+         </div>
+       </div>
+     </section>
 
     <footer class="watchfooter">
       <div class="container">
