--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div class="row h-100">
           <div class="col-lg-7 my-auto">
             <div class="header-content mx-auto">
-              <h2>Bitcoin should be <strong>fun</strong>, usable and <strong>for everyone</strong></h2>
+              <h2>Bitcoin should be <strong>fun</strong>, usable and <strong>for anyone</strong></h2>
                 <h1 class="mb-5">Your <span class="light-blue">Bitcoin wallet</span></h1>
                   <ul class="list-unstyled cta">
                     <li><a class="badge-link2" href="https://itunes.apple.com/app/bluewallet-bitcoin-wallet/id1376878040" target="_blank">
@@ -129,7 +129,7 @@
                   </ul>
             </div>
               <div class="apk">
-              <a href="https://github.com/BlueWallet/BlueWallet/releases">Don't have access to Google Play? Download the APK here.</a>
+              Get the <a href="https://github.com/BlueWallet/BlueWallet/releases">APK for android here</a> and the <a href="/desktop-bitcoin-wallet">Desktop version here</a>.
             </div>
           </div>
 
