--- a/desktop-bitcoin-wallet/index.html
+++ b/desktop-bitcoin-wallet/index.html
@@ -161,7 +161,7 @@
 
                <div class="col-md-4">
                  <h4>HW integration</h4>
-                 <p>Easily connect to your hardwallet wallet through watch-only and PSBTs support.</p>
+                 <p>Easily connect to your hardware wallet through watch-only and PSBTs support.</p>
                </div>
                <div class="col-md-4">
                   <h4>Plausible Deniability</h4>
@@ -169,7 +169,7 @@
                </div>
                <div class="col-md-4">
                   <h4>Multiple Wallets</h4>
-                  <p>Supports most wallet types. Like Bip84/49/44, electrum, legacy, etc.</p>
+                  <p>Support for different wallet types. Like Bip84/49/44, electrum, legacy, etc.</p>
                </div>
             </div>
          </div>
