--- a/desktop-bitcoin-wallet/index.html
+++ b/desktop-bitcoin-wallet/index.html
@@ -165,7 +165,7 @@
                </div>
                <div class="col-md-4">
                   <h4>Plausible Deniability</h4>
-                  <p>Create multiple storages or fake ones in case of a forced disclosure. All encrypted behind a password.</p>
+                  <p>Create multiple storages or fake ones in case of a forced disclosure.</p>
                </div>
                <div class="col-md-4">
                   <h4>Multiple Wallets</h4>
