--- a/features/index.html
+++ b/features/index.html
@@ -118,8 +118,8 @@
             <h1 class="text-left">Features</h1>
 
               <div class="feature-item">
-                  <h3 id="desktop">Desktop app <span class="warning">beta</span></h3>
-                  <p>The Desktop Bitcoin wallet is now available for macOS, and provides all the features and powered of its mobile companion app.</p>
+                  <h3 id="desktop">Desktop app <span class="warning">alpha</span></h3>
+                  <p>The Desktop Bitcoin wallet is now available for macOS, and provides all the features and power of its mobile counterpart app.</p>
                  <a href="/desktop-bitcoin-wallet">Read more →</a>
                 </div>
 
