add release candidate

--- a/desktop-bitcoin-wallet/index.html
+++ b/desktop-bitcoin-wallet/index.html
@@ -139,7 +139,7 @@
               <h1>Desktop Wallet</h1>
                 <p>BlueWallet Desktop Bitcoin Wallet <strong>Alpha version</strong> for macOS</p>
                 <div class="cta text-center">
-                  <a href="/desktop-bitcoin-wallet/downloads/alpha-0_0_2/BlueWallet.dmg">
+                  <a href="/desktop-bitcoin-wallet/downloads/rc/BlueWallet%205.5.4.dmg">
                     <img alt="download bitcoin desktop wallet" src="../img/mac-store-badge.svg">
                   </a>
                 </div>
