change release naming

--- a/desktop-bitcoin-wallet/index.html
+++ b/desktop-bitcoin-wallet/index.html
@@ -137,7 +137,7 @@
           <div class="col-lg-12 my-auto text-center">
             <div class="header-content text-center">
               <h1>Desktop Wallet</h1>
-                <p>BlueWallet Desktop Bitcoin Wallet <strong>Alpha version</strong> for macOS</p>
+                <p>BlueWallet Desktop Bitcoin Wallet <strong>Release Candidate</strong> for macOS</p>
                 <div class="cta text-center">
                   <a href="/desktop-bitcoin-wallet/downloads/rc/BlueWallet%205.5.4.dmg">
                     <img alt="download bitcoin desktop wallet" src="../img/mac-store-badge.svg">
