--- a/desktop-bitcoin-wallet/index.html
+++ b/desktop-bitcoin-wallet/index.html
@@ -137,11 +137,16 @@
           <div class="col-lg-12 my-auto text-center">
             <div class="header-content text-center">
               <h1>Desktop Wallet</h1>
-                <p>BlueWallet Desktop Bitcoin Wallet <strong>Release Candidate</strong> for macOS</p>
+                <p>BlueWallet Desktop Bitcoin Wallet for macOS</p>
                 <div class="cta text-center">
-                  <a href="/desktop-bitcoin-wallet/downloads/rc/BlueWallet%205.5.4.dmg">
+                  <a href="https://apps.apple.com/app/bluewallet-bitcoin-wallet/id1376878040" target="_blank">
                     <img alt="download bitcoin desktop wallet" src="../img/mac-store-badge.svg">
                   </a>
+                  <br />
+                  <a class="apk" href="/desktop-bitcoin-wallet/downloads/BlueWallet%205.5.61.dmg">
+                    or direct .dmg download
+                  </a>
+
                 </div>
             </div>
           </div>
@@ -157,25 +162,58 @@
       <div class="container">
          <div class="col-md-12 text-center">
             <h2>Features</h2>
-            <div class="row tell">
-
-               <div class="col-md-4">
-                 <h4>HW integration</h4>
+            <div class="row">
+              <div class="col-lg-4">
+                <div class="featme">
+                 <h4>HWW integration</h4>
                  <p>Easily connect to your hardware wallet through watch-only and PSBTs support.</p>
                </div>
-               <div class="col-md-4">
+              </div>
+              <div class="col-lg-4">
+                <div class="featme">
                   <h4>Plausible Deniability</h4>
                   <p>Create multiple storages or fake ones in case of a forced disclosure.</p>
-               </div>
-               <div class="col-md-4">
+                </div>
+              </div>
+              <div class="col-lg-4">
+                <div class="featme">
                   <h4>Multiple Wallets</h4>
                   <p>Support for different wallet types. Like Bip84/49/44, electrum, legacy, etc.</p>
+                </div>
+              </div>
+              <div class="col-lg-4">
+                <div class="featme">
+                 <h4>Full node</h4>
+                 <p>Full node connection through ElectrumX, Electrs or Electrum Personal Server.</p>
                </div>
+              </div>
+              <div class="col-lg-4">
+                <div class="featme">
+                  <h4>Transactions control</h4>
+                  <p>Easily Bump, Cancel or Batch transactions. With RBF and CPFP.</p>
+                </div>
+              </div>
+              <div class="col-lg-4">
+                <div class="featme">
+                  <h4>Notifications</h4>
+                  <p>With push notifications for pending and confirmed transactions.</p>
+                </div>
+              </div>
             </div>
          </div>
        </div>
-     </section>
 
+     </section>
+     <div class="cta text-center">
+        <a href="https://apps.apple.com/app/bluewallet-bitcoin-wallet/id1376878040" target="_blank">
+          <img alt="download bitcoin desktop wallet" src="../img/mac-store-badge.svg">
+        </a>
+        <br />
+        <a class="apk" href="/desktop-bitcoin-wallet/downloads/BlueWallet%205.5.61.dmg">
+          or direct .dmg download
+        </a>
+
+      </div>
     <footer class="watchfooter">
       <div class="container">
        
