--- a/features/index.html
+++ b/features/index.html
@@ -118,7 +118,7 @@
             <h1 class="text-left">Features</h1>
 
               <div class="feature-item">
-                  <h3 id="desktop">Desktop app <span class="warning">alpha</span></h3>
+                  <h3 id="desktop">Desktop app <span class="done">new</span></h3>
                   <p>The Desktop Bitcoin wallet is now available for macOS, and provides all the features and power of its mobile counterpart app.</p>
                  <a href="/desktop-bitcoin-wallet">Read more →</a>
                 </div>
