--- a/desktop-bitcoin-wallet/index.html
+++ b/desktop-bitcoin-wallet/index.html
@@ -14,7 +14,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, maximum-scale=1.0, initial-scale=1.0">
-    <meta name="description" content="Apple Watch app for bitcoin and lightning">
+    <meta name="description" content="Desktop Bitcoin Wallet - Bitcoin and Lightning wallet for Desktop, macOS, Linux and Windows">
     <meta name="author" content="Bluewallet Services S.R.L.">
 
     <title>Desktop Bitcoin Wallet - Bitcoin and Lightning wallet for Desktop, macOS, Linux and Windows</title>
@@ -51,7 +51,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Desktop Bitcoin Wallet - Bitcoin and Lightning wallet for Desktop, macOS, Linux and Windows" />
     <meta property="og:url" content="https://bluewallet.io/" />
-    <meta property="og:title" content="Watch app - Bitcoin and Lightning wallet for iOS and Apple Watch" />
+    <meta property="og:title" content="Desktop Bitcoin Wallet - Bitcoin and Lightning wallet for Desktop, macOS, Linux and Windows" />
     <meta property="fb:app_id" content="254973701957449" />
     <meta property="fb:pages" content="499685187154976" />
     <meta name="twitter:card" content="summary_large_image" />
