ADD: testpage bankid deeplinks

--- a/testpage/index.html
+++ b/testpage/index.html
@@ -136,8 +136,12 @@
 		</div>
 
 
-		
-		
+		<a href="bankid:///?autostarttoken=2a352550-60ba-4dc9-9a36-1b6b1548a3df&amp;redirect=bluewallet%3A%2F%2F" class="sfqb__button sfqb__bankid-btn" target="_top">Tap to open BankID (triple slash)</a><br/>
+
+		<a href="bankid://?autostarttoken=2a352550-60ba-4dc9-9a36-1b6b1548a3df&amp;redirect=bluewallet%3A%2F%2F" class="sfqb__button sfqb__bankid-btn" target="_top">Tap to open BankID (double slash)</a><br/>
+
+		<a href="bankid:?autostarttoken=2a352550-60ba-4dc9-9a36-1b6b1548a3df&amp;redirect=bluewallet%3A%2F%2F" class="sfqb__button sfqb__bankid-btn" target="_top">Tap to open BankID (no slash)</a><br/>
+
 	</div>
     
 	
