--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -126,6 +126,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </a>
         </div> <!-- end -->
         <div class="row"> <!-- start -->
+            <a href="https://getspendl.com/?utm_source=bluewallet">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/spendl.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>Spendl</h2>
+                        <p>Simply pay anywhere</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
+        <div class="row"> <!-- start -->
             <a href="https://torguard.net/?utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
