--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -126,7 +126,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </a>
         </div> <!-- end -->
         <div class="row"> <!-- start -->
-            <a href="https://getspendl.com/?utm_source=bluewallet">
+            <a href="https://app.getspendl.com/?partner=bluewallet&primaryColor=%2357BBE4">
                 <div class="grid-container">
                     <div class="appicon">
                         <img src="img/spendl.png">
