--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     <meta name="theme-color" content="#ffffff">
 
     <!-- og:tags -->
-    <meta property="og:image" content="https://bluewallet.io/img/backpayjoin.png" />
-    <meta name="twitter:image" content="https://bluewallet.io/img/backpayjoin.png" />
+    <meta property="og:image" content="https://bluewallet.io/img/backpurple.png" />
+    <meta name="twitter:image" content="https://bluewallet.io/img/backpurple.png" />
 
     <meta property="og:site_name" content="BlueWallet - Bitcoin wallet" />
     <meta property="og:type" content="website" />
