--- a/buy-bitcoin-redirect.html
+++ b/buy-bitcoin-redirect.html
@@ -38,10 +38,10 @@
   <div class="lds-dual-ring"></div>
   <script>
     var safello_countries = ["SE"];
-    var xanpool_countries = ["TH", "PH", "IN", "VN", "MY"]; // + "SG", "HK", "ID"
+    var xanpool_countries = []; // + "SG", "HK", "ID"
     var moonpay_currencies = ["AUD", "CAD", "CHF", "EUR", "GBP", "ILS", "NOK", "PLN", "RUB", "SEK", "USD", "ZAR"]; // curl https://api.moonpay.io/v3/currencies?apiKey=pk_live_IkhSI2lIXSiolwakfd95QFD4p3908cZa | jq '.' | grep fiat -A 2 | grep code
     var xanpool_currencies = ["SGD", "HKD", "THB", "PHP", "INR", "IDR", "VND", "MYR", "SGD", "HKD", "PHP", "INR", "VND", "THB"];
-    var mercuryo_countries = ["RU", "UA", "BY", "AM", "AZ", "BY", "GEN", "KZ", "KE", "LA", "MD", "MC", "ME", "SM", "RS", "TJ", "UZ", "SG", "HK", "KR", "AR", "ID", "TR", "JP"];
+    var mercuryo_countries = [];
     var mercuryo_currencies = ["EUR", "RUB", "USD", "IDR", "KRW", "JPY", "TRY", "GBP", "UAH", "ARS"];
     var u = new URLSearchParams(window.location.search);
     var address = u.get('address') || '';
