--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -527,6 +527,24 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
             </a>
         </div> <!-- end -->
+        
+        <div class="section"> <!-- section start -->
+            <h3>Books</h3>
+        </div> <!-- section end -->
+  <div class="row"> <!-- start -->
+            <a href="https://qabitcoin.davidcoen.it/?utm_source=bluewallet">
+                <div class="grid-container">
+                    <div class="appicon">
+                        <img src="img/qabitcoin.png">
+                    </div>
+                    <div class="apptext">
+                        <h2>Q/A about Bitcoin</h2>
+                        <p>A questions & answers Bitcoin book, available in different languages</p>
+                    </div>
+                </div>
+            </a>
+        </div> <!-- end -->
+        
         <div class="section"> <!-- section start -->
             <h3>Miscellaneous</h3>
         </div> <!-- section end -->
