Added silent.link private eSIM service

--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -77,7 +77,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <a href="https://silent.link/?utm_source=bluewallet">
                 <div class="grid-container">
                     <div class="appicon">
-                        <img src="https://silent.link/icon?utm_source=bluewallet">
+                        <img src="img/silent.link.png">
                     </div>
                     <div class="apptext">
                         <h2>silent.link</h2>
