--- a/testpage/index.html
+++ b/testpage/index.html
@@ -80,6 +80,19 @@
 		  </div>
 		</div>
 
+		<div class="row">
+		    <div class="col-sm">
+		      <img src="https://user-images.githubusercontent.com/1913337/102130276-8f704880-3e48-11eb-9ef3-e2d897fe0b7c.png"/>
+		      <br/>
+				<a href="bluewallet:setelectrumserver?server=electrum1.bluewallet.io%3A443%3As" target="_top">bluewallet:setelectrumserver?server=electrum1.bluewallet.io%3A443%3As</a><br/>
+		  </div>
+		    <div class="col-sm">
+		      <img src="https://user-images.githubusercontent.com/1913337/102631346-8384cf00-4145-11eb-9f6d-e4c42954bfa7.png"/>
+		      <br/>
+				<a href="bluewallet:setlndhuburl?url=https%3A%2F%2Flndhub.herokuapp.com" target="_top">bluewallet:setlndhuburl?url=https%3A%2F%2Flndhub.herokuapp.com</a><br/>
+		  </div>
+		</div>
+
 		<hr/>
 		<h3>Deeplinks prefixed with `bluewallet:`</h3>
 
@@ -138,10 +151,6 @@
 		      <img height="50%" src="azteco.png"/>
 		  </div>
 		</div>
-
-		<a href="bluewallet:setelectrumserver?server=electrum1.bluewallet.io%3A443%3As" target="_top">setelectrumserver</a><br/>
-
-		<a href="bluewallet:setlndhuburl?url=https%3A%2F%2Flndhub.herokuapp.com" target="_top">setlndhuburl</a><br/>
 
 	</div>
     
