add releases link

--- a/desktop-bitcoin-wallet/index.html
+++ b/desktop-bitcoin-wallet/index.html
@@ -143,7 +143,7 @@
                     <img alt="download bitcoin desktop wallet" src="../img/mac-store-badge.svg">
                   </a>
                   <br />
-                  <a class="apk" href="/desktop-bitcoin-wallet/downloads/BlueWallet%205.6.60.dmg">
+                  <a class="apk" href="https://github.com/BlueWallet/BlueWallet/releases" target="_blank">
                     or direct .dmg download
                   </a>
 
@@ -209,7 +209,7 @@
           <img alt="download bitcoin desktop wallet" src="../img/mac-store-badge.svg">
         </a>
         <br />
-        <a class="apk" href="/desktop-bitcoin-wallet/downloads/BlueWallet%205.6.60.dmg">
+        <a class="apk" href="https://github.com/BlueWallet/BlueWallet/releases" target="_blank">
           or direct .dmg download
         </a>
 
