--- a/marketplace-btc/index.html
+++ b/marketplace-btc/index.html
@@ -124,7 +124,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div> <!-- end -->
         
        <div class="row"> <!-- start -->
-            <a href="https://silent.link/?utm_source=bluewallet">
+            <a href="https://silent.link/?utm_source=bluewallet&utm_media=btc">
                 <div class="grid-container">
                     <div class="appicon">
                         <img src="img/silent.link.png">
