--- a/marketplace/index.html
+++ b/marketplace/index.html
@@ -74,7 +74,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </a>
         </div> <!-- end -->
         <div class="row"> <!-- start -->
-            <a href="https://silent.link/?utm_source=bluewallet">
+            <a href="https://silent.link/?utm_source=bluewallet&utm_media=ln">
                 <div class="grid-container">
                     <div class="appicon">
                         <img src="img/silent.link.png">
