Add homebrew installation
Use homebrew on Mac to download BlueWallet, using "brew install bluewallet"

--- a/desktop-bitcoin-wallet/index.html
+++ b/desktop-bitcoin-wallet/index.html
@@ -146,6 +146,10 @@
                   <a class="apk" href="https://github.com/BlueWallet/BlueWallet/releases" target="_blank">
                     or direct .dmg download
                   </a>
+                  <br />
+                  <a class="apk" href="https://brew.sh/" target="_blank">
+                    or with homebrew using "brew install bluewallet"
+                  </a>
 
                 </div>
             </div>
