--- a/desktop-bitcoin-wallet/index.html
+++ b/desktop-bitcoin-wallet/index.html
@@ -147,8 +147,8 @@
                     or direct .dmg download
                   </a>
                   <br />
-                  <a class="apk" href="https://brew.sh/" target="_blank">
-                    or with homebrew using "brew install bluewallet"
+                  <a class="apk" href="https://formulae.brew.sh/cask/bluewallet" target="_blank">
+                    or with homebrew use "brew install --cask bluewallet"
                   </a>
 
                 </div>
