ADD: Homebrew link

--- a/desktop-bitcoin-wallet/index.html
+++ b/desktop-bitcoin-wallet/index.html
@@ -143,8 +143,12 @@
                     <img alt="download bitcoin desktop wallet" src="../img/mac-store-badge.svg">
                   </a>
                   <br />
+                  <a class="apk" href="https://formulae.brew.sh/cask/bluewallet" target="_blank">
+                    Homebrew
+                  </a>
+                  or  
                   <a class="apk" href="https://github.com/BlueWallet/BlueWallet/releases" target="_blank">
-                    or direct .dmg download
+                    direct .dmg download
                   </a>
 
                 </div>
